tests/NormalTests/paczka1/small_fuzzy/34335547.err
Error in line 2: vmrucvDyEk S73x 98,8
Error in line 4: vmrucvDyEk A400 513,0
Error in line 3: a6zEzIWV8 A910 91,1
